Shift clicking on any border, thumbnail, or separation correctly selects the appropriate ranges for replace/insertion.

--- a/public/stylesheets/pages/viewer_editing.css
+++ b/public/stylesheets/pages/viewer_editing.css
@@ -504,6 +504,14 @@
 .DV-removePages .DV-overlay.visible {
   background-color: red;
 }
+.DV-replacePages .DV-thumbnails ::-moz-selection {
+background: transparent;
+} 
+
+.DV-replacePages .DV-thumbnails ::selection {
+background: transparent;
+}
+
 
 .DV-replacePages .DV-thumbnails .DV-thumbnail.DV-hover-thumbnail .DV-pageNumber {
   text-decoration: none;
